--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "chai": "~4.2.0",
     "cross-env": "~7.0.0",
     "dts-bundle-generator": "~5.6.0",
-    "eslint": "~7.19.0",
+    "eslint": "^7.19.0",
     "eslint-plugin-deprecation": "~1.2.0",
     "eslint-plugin-import": "~2.22.0",
     "eslint-plugin-jsdoc": "~31.6.0",
