--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "prepare-release": "npm-run-all clean build:release && node ./scripts/clean-package-json.js",
     "size-limit": "size-limit",
     "verify": "npm-run-all clean -p lint check-markdown-links build:prod -p tsc-verify test size-limit",
-    "test": "mocha tests/unittests/**/*.spec.ts"
+    "test": "mocha tests/unittests/**/*.spec.ts",
+    "prepare": "npm run build:prod"
   }
 }
