--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fancy-canvas": "0.2.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.5",
     "@rollup/plugin-node-resolve": "~13.1.1",
     "@rollup/plugin-replace": "~3.0.0",
     "@size-limit/file": "~7.0.4",
@@ -57,6 +58,7 @@
     "eslint-plugin-jsdoc": "~37.2.0",
     "eslint-plugin-markdown": "~2.2.1",
     "eslint-plugin-prefer-arrow": "~1.2.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-tsdoc": "~0.2.14",
     "eslint-plugin-unicorn": "~39.0.0",
     "express": "~4.17.1",
