--- a/website/package.json
+++ b/website/package.json
@@ -18,11 +18,19 @@
     "@tsconfig/docusaurus": "~1.0.4",
     "cross-env": "~7.0.3",
     "docusaurus-plugin-typedoc": "0.16.6",
+    "lightweight-charts": "^3.7.0",
     "prism-react-renderer": "~1.2.1",
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
     "typedoc": "~0.22.10",
     "typedoc-plugin-markdown": "~3.11.7",
     "typescript": "4.5.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@mdx-js/loader": "^1.6.22"
   }
 }
