--- a/src/tsconfig.model.json
+++ b/src/tsconfig.model.json
@@ -7,6 +7,7 @@
 	"include": [
 		"./model/**/*.ts",
 		"./renderers/**/*.ts",
-		"./views/**/*.ts"
+		"./views/**/*.ts",
+		"./api/iseries-primitive.ts"
 	]
 }
