Update .github/workflows/deploy.yml to use `master`
Co-authored-by: Edward Dewhurst <edewhurst@tradingview.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Documentation Website Deployment
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - '.github/workflows/deploy.yml'
       - 'src/**'
