restore separation between api and model in tsconfig

--- a/src/tsconfig.model.json
+++ b/src/tsconfig.model.json
@@ -7,8 +7,6 @@
 	"include": [
 		"./model/**/*.ts",
 		"./renderers/**/*.ts",
-		"./views/**/*.ts",
-		"./api/**/*.ts",
-		"./gui/**/*.ts"
+		"./views/**/*.ts"
 	]
 }
