--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "prepare-release": "npm-run-all clean build:release && npm run prepare-package-json-for-release",
     "prepare-package-json-for-release": "node ./scripts/clean-package-json.js",
     "size-limit": "size-limit",
-    "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit",
-    "test": "mocha tests/unittests/**/*.spec.ts"
+    "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit -p type-tests",
+    "test": "mocha tests/unittests/**/*.spec.ts",
+    "type-tests": "tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit"
   }
 }
