custom price line close button and cursor pointer

--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -13,6 +13,7 @@
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
+        "noImplicitAny": false,
 		"noUnusedLocals": true,
 		"preserveConstEnums": true,
 		"resolveJsonModule": true,
