Use estimated label length for tick marks

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ debug.html
 /website/.cache-loader
 /website/.previous-typings-cache/*.d.ts
 /website/versions.d.ts
+/merge-base-dist
 
 !/src/typings/**/*.d.ts
 
