update create-lwc-plugin package.json for beta release

--- a/packages/create-lwc-plugin/package.json
+++ b/packages/create-lwc-plugin/package.json
@@ -1,9 +1,9 @@
 {
   "name": "create-lwc-plugin",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
   "license": "MIT",
-  "author": "TradingView",
+  "author": "TradingView, Inc.",
   "description": "Wizard-like CLI tool for scaffolding a new plugin for Lightweight Charts™",
   "keywords": ["lightweight-charts", "lwc-plugin", "plugins"],
   "bin": {
