Update website deploy to also run on updates to the plugin examples

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
       - '.github/workflows/deploy.yml'
       - 'src/**'
       - 'website/**'
+      - 'plugin-examples/src/**'
 
 jobs:
   deploy:
