--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+		"tsc": "tsc"
   },
   "dependencies": {
     "@docusaurus/core": "2.3.1",
