--- a/package.json
+++ b/package.json
@@ -129,6 +129,6 @@
     "size-limit": "size-limit",
     "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit -p type-tests",
     "test": "mocha tests/unittests/**/*.spec.ts",
-    "type-tests": "tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit"
+    "type-tests": "tsc -b ./src/tsconfig.composite.json && tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit"
   }
 }
