--- a/package.json
+++ b/package.json
@@ -87,12 +87,12 @@
     "markdown-it": "~13.0.1",
     "markdown-it-anchor": "~8.6.7",
     "markdownlint-cli": "~0.34.0",
-    "memlab": "~1.1.39",
+    "memlab": "1.1.45",
     "mocha": "~10.2.0",
     "npm-run-all": "~4.1.5",
     "pixelmatch": "~5.3.0",
     "pngjs": "~7.0.0",
-    "puppeteer": "~20.2.1",
+    "puppeteer": "~21.11.0",
     "rimraf": "~5.0.1",
     "rollup": "~3.22.0",
     "size-limit": "~8.2.4",
