--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
       "default": {
         "types": "./dist/typings.d.ts",
         "import": "./dist/lightweight-charts.production.mjs"
-
       }
     }
   },
@@ -96,14 +95,14 @@
     "rollup": "~3.22.0",
     "size-limit": "~8.2.4",
     "ts-node": "~10.9.1",
+    "ts-patch": "~3.1.2",
     "ts-transformer-properties-rename": "~0.16.0",
     "ts-transformer-strip-const-enums": "~1.0.1",
     "tslib": "2.5.2",
     "tslint": "6.1.3",
     "tslint-eslint-rules": "~5.4.0",
     "tslint-microsoft-contrib": "~6.2.0",
-    "ttypescript": "~1.5.15",
-    "typescript": "4.9.5",
+    "typescript": "~5.4.5",
     "yargs": "~17.7.2"
   },
   "scripts": {
@@ -111,7 +110,7 @@
     "install-hooks": "node scripts/githooks/install.js",
     "clean": "rimraf lib/ dist/",
     "bundle-dts": "tsc --noEmit --allowJs dts-config.js && dts-bundle-generator --config dts-config.js",
-    "tsc": "ttsc -p tsconfig.prod.json",
+    "tsc": "tspc -p tsconfig.prod.json",
     "tsc-watch": "npm run tsc -- --watch --preserveWatchOutput",
     "tsc-verify": "node website/scripts/generate-versions-dts.js && tsc -b tsconfig.composite.json",
     "lint": "npm-run-all -p lint:**",
