--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type": "git",
     "url": "https://github.com/tradingview/lightweight-charts.git"
   },
+  "type": "module",
   "module": "dist/lightweight-charts.production.mjs",
   "main": "dist/lightweight-charts.production.mjs",
   "typings": "dist/typings.d.ts",
@@ -55,53 +56,55 @@
     "@rollup/plugin-node-resolve": "~15.2.3",
     "@rollup/plugin-replace": "~5.0.5",
     "@rollup/plugin-terser": "~0.4.4",
-    "@size-limit/file": "~8.2.4",
-    "@types/chai": "~4.3.5",
+    "@size-limit/file": "~11.1.4",
+    "@types/chai": "~4.3.16",
     "@types/glob": "~8.1.0",
-    "@types/mocha": "~10.0.1",
+    "@types/mocha": "~10.0.6",
     "@types/node": "~18.19.18",
     "@types/pixelmatch": "~5.2.4",
     "@types/pngjs": "~6.0.1",
-    "@typescript-eslint/eslint-plugin": "~5.59.6",
-    "@typescript-eslint/eslint-plugin-tslint": "~5.59.6",
-    "@typescript-eslint/parser": "~5.59.6",
+    "@typescript-eslint/eslint-plugin": "~7.10.0",
+    "@typescript-eslint/eslint-plugin-tslint": "~7.0.2",
+    "@typescript-eslint/parser": "~7.10.0",
     "bytes": "~3.1.2",
-    "chai": "~4.3.7",
+    "chai": "~5.1.1",
     "chai-exclude": "~2.1.0",
     "cross-env": "~7.0.3",
-    "dts-bundle-generator": "~8.0.1",
-    "eslint": "~7.32.0",
-    "eslint-plugin-deprecation": "~1.3.3",
-    "eslint-plugin-import": "~2.27.5",
-    "eslint-plugin-jsdoc": "~39.8.0",
-    "eslint-plugin-markdown": "~3.0.0",
-    "eslint-plugin-mdx": "~1.17.0",
+    "dts-bundle-generator": "~9.5.1",
+    "eslint": "8",
+    "eslint-formatter-unix": "~8.40.0",
+    "eslint-plugin-deprecation": "~2.0.0",
+    "eslint-plugin-import": "~2.29.1",
+    "eslint-plugin-jsdoc": "~48.2.5",
+    "eslint-plugin-markdown": "~5.0.0",
+    "eslint-plugin-mdx": "~3.1.5",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-react": "~7.32.2",
+    "eslint-plugin-react": "~7.34.1",
     "eslint-plugin-tsdoc": "~0.2.17",
-    "eslint-plugin-unicorn": "~40.1.0",
+    "eslint-plugin-unicorn": "~53.0.0",
     "express": "~4.19.2",
     "glob": "~10.2.5",
     "markdown-it": "~13.0.1",
     "markdown-it-anchor": "~8.6.7",
     "markdownlint-cli": "~0.34.0",
     "memlab": "~1.1.39",
-    "mocha": "~10.2.0",
+    "mocha": "~10.4.0",
     "npm-run-all": "~4.1.5",
     "pixelmatch": "~5.3.0",
     "pngjs": "~7.0.0",
     "puppeteer": "~21.7.0",
     "rimraf": "~5.0.1",
     "rollup": "~4.17.2",
-    "size-limit": "~8.2.4",
-    "ts-node": "~10.9.1",
+    "size-limit": "~11.1.4",
+    "ts-node": "~10.9.2",
     "ts-patch": "~3.1.2",
     "ts-transformer-properties-rename": "~0.16.0",
     "ts-transformer-strip-const-enums": "~2.0.0",
-    "tslib": "2.5.2",
+    "tslib": "2.6.2",
     "tslint": "6.1.3",
     "tslint-eslint-rules": "~5.4.0",
     "tslint-microsoft-contrib": "~6.2.0",
+    "tsx": "~4.10.5",
     "typescript": "~5.4.5",
     "yargs": "~17.7.2"
   },
@@ -109,14 +112,14 @@
     "postinstall": "npm run install-hooks",
     "install-hooks": "node scripts/githooks/install.js",
     "clean": "rimraf lib/ dist/",
-    "bundle-dts": "tsc --noEmit --allowJs dts-config.js && dts-bundle-generator --config dts-config.js",
+    "bundle-dts": "tsc --noEmit --allowJs dts-config.cjs && dts-bundle-generator --config dts-config.cjs",
     "tsc": "tspc -p tsconfig.prod.json",
     "tsc-watch": "npm run tsc -- --watch --preserveWatchOutput",
     "tsc-verify": "node website/scripts/generate-versions-dts.js && tsc -b tsconfig.composite.json",
     "lint": "npm-run-all -p lint:**",
     "lint:eslint": "eslint --format=unix ./",
-    "lint:md": "markdownlint -i \"**/node_modules/**\" -i \"**/website/docs/api/**\" -i \"**/website/versioned_docs/**/api/**\" \"**/*.md\"",
-    "check-dts-docs": "eslint --format=unix ./dist/typings.d.ts",
+    "lint:md": "markdownlint -i \"**/node_modules/**\" -i \"**/website/docs/api/**\" -i \"**/website/versioned_docs/**/api/**\" -i \"**/*.mdx\" \"**/*.md\"",
+    "check-dts-docs": "eslint --format=unix ./dist/typings.d.ts --no-ignore",
     "check-markdown-links": "node scripts/check-markdown-links.js",
     "rollup": "rollup -c rollup.config.js",
     "rollup-watch": "npm run rollup -- --watch",
@@ -128,7 +131,7 @@
     "prepare-package-json-for-release": "node ./scripts/clean-package-json.js",
     "size-limit": "size-limit",
     "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit -p type-tests",
-    "test": "mocha tests/unittests/**/*.spec.ts",
+    "test": "mocha --import=tsx tests/unittests/**/*.spec.ts",
     "type-tests": "tsc -b ./src/tsconfig.composite.json && tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit"
   }
 }
