--- a/package.json
+++ b/package.json
@@ -54,18 +54,18 @@
   "devDependencies": {
     "@juggle/resize-observer": "~3.4.0",
     "@rollup/plugin-node-resolve": "~15.2.3",
-    "@rollup/plugin-replace": "~5.0.5",
+    "@rollup/plugin-replace": "~5.0.7",
     "@rollup/plugin-terser": "~0.4.4",
     "@size-limit/file": "~11.1.4",
     "@types/chai": "~4.3.16",
     "@types/glob": "~8.1.0",
     "@types/mocha": "~10.0.6",
     "@types/node": "~18.19.18",
-    "@types/pixelmatch": "~5.2.4",
-    "@types/pngjs": "~6.0.1",
-    "@typescript-eslint/eslint-plugin": "~7.10.0",
+    "@types/pixelmatch": "~5.2.6",
+    "@types/pngjs": "~6.0.5",
+    "@typescript-eslint/eslint-plugin": "~7.12.0",
     "@typescript-eslint/eslint-plugin-tslint": "~7.0.2",
-    "@typescript-eslint/parser": "~7.10.0",
+    "@typescript-eslint/parser": "~7.12.0",
     "bytes": "~3.1.2",
     "chai": "~5.1.1",
     "chai-exclude": "~2.1.0",
@@ -73,38 +73,38 @@
     "dts-bundle-generator": "~9.5.1",
     "eslint": "8",
     "eslint-formatter-unix": "~8.40.0",
-    "eslint-plugin-deprecation": "~2.0.0",
+    "eslint-plugin-deprecation": "~3.0.0",
     "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~48.2.5",
+    "eslint-plugin-jsdoc": "~48.2.9",
     "eslint-plugin-markdown": "~5.0.0",
     "eslint-plugin-mdx": "~3.1.5",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-react": "~7.34.1",
-    "eslint-plugin-tsdoc": "~0.2.17",
+    "eslint-plugin-react": "~7.34.2",
+    "eslint-plugin-tsdoc": "~0.3.0",
     "eslint-plugin-unicorn": "~53.0.0",
     "express": "~4.19.2",
-    "glob": "~10.2.5",
-    "markdown-it": "~13.0.1",
-    "markdown-it-anchor": "~8.6.7",
-    "markdownlint-cli": "~0.34.0",
-    "memlab": "~1.1.39",
+    "glob": "~10.4.1",
+    "markdown-it": "~14.1.0",
+    "markdown-it-anchor": "~9.0.1",
+    "markdownlint-cli": "~0.41.0",
+    "memlab": "~1.1.48",
     "mocha": "~10.4.0",
     "npm-run-all": "~4.1.5",
     "pixelmatch": "~5.3.0",
     "pngjs": "~7.0.0",
-    "puppeteer": "~21.7.0",
-    "rimraf": "~5.0.1",
-    "rollup": "~4.17.2",
+    "puppeteer": "~22.10.0",
+    "rimraf": "~5.0.7",
+    "rollup": "~4.18.0",
     "size-limit": "~11.1.4",
     "ts-node": "~10.9.2",
-    "ts-patch": "~3.1.2",
+    "ts-patch": "~3.2.0",
     "ts-transformer-properties-rename": "~0.16.0",
     "ts-transformer-strip-const-enums": "~2.0.0",
-    "tslib": "2.6.2",
+    "tslib": "2.6.3",
     "tslint": "6.1.3",
     "tslint-eslint-rules": "~5.4.0",
     "tslint-microsoft-contrib": "~6.2.0",
-    "tsx": "~4.10.5",
+    "tsx": "~4.13.2",
     "typescript": "~5.4.5",
     "yargs": "~17.7.2"
   },
@@ -112,7 +112,7 @@
     "postinstall": "npm run install-hooks",
     "install-hooks": "node scripts/githooks/install.js",
     "clean": "rimraf lib/ dist/",
-    "bundle-dts": "tsc --noEmit --allowJs dts-config.cjs && dts-bundle-generator --config dts-config.cjs",
+    "bundle-dts": "dts-bundle-generator --config dts-config.json",
     "tsc": "tspc -p tsconfig.prod.json",
     "tsc-watch": "npm run tsc -- --watch --preserveWatchOutput",
     "tsc-verify": "node website/scripts/generate-versions-dts.js && tsc -b tsconfig.composite.json",
