renamed Range to IRange due to dts-bundle-generator bug
dts-bundle-generator is incorrectly thinking 'Range' is duplicated. Renaming the interface fixes the issue.

--- a/dts-config.json
+++ b/dts-config.json
@@ -8,8 +8,7 @@
 			"outFile": "./dist/typings.d.ts",
 			"output": {
 				"sortNodes": true,
-				"respectPreserveConstEnum": true,
-				"exportReferencedTypes": false
+				"respectPreserveConstEnum": true
 			}
 		}
 	]
