update dependencies in plugin-examples

--- a/plugin-examples/tsconfig.json
+++ b/plugin-examples/tsconfig.json
@@ -15,7 +15,10 @@
 		"skipLibCheck": true,
 		"declaration": true,
 		"declarationDir": "typings",
-		"emitDeclarationOnly": true
+		"emitDeclarationOnly": true,
+		"typeRoots": [
+			"./node_modules/@types"
+		]
 	},
 	"include": ["src"]
 }
