fix website build with new typescript version

--- a/website/.previous-typings-cache/tsconfig.json
+++ b/website/.previous-typings-cache/tsconfig.json
@@ -1,4 +1,13 @@
 {
+	"compilerOptions": {
+		"typeRoots": [
+			"./node_modules/@types"
+		],
+		"lib": [
+			"dom",
+			"es2020"
+		]
+	},
 	"include": [
 		"./*.d.ts",
 		"../../dist/typings.d.ts"
