--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -5,6 +5,9 @@
 		"resolveJsonModule": true,
 		"jsx": "react",
 		"moduleResolution": "node",
+		"typeRoots": [
+			"./node_modules/@types"
+		]
 	},
 	"include": [
 		"./**/*.ts",
