--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -4,10 +4,7 @@
 		"strict": true,
 		"resolveJsonModule": true,
 		"jsx": "react",
-		"moduleResolution": "node",
-		"typeRoots": [
-			"./node_modules/@types"
-		]
+		"moduleResolution": "node"
 	},
 	"include": [
 		"./**/*.ts",
