--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "charts"
   ],
   "engines": {
-    "node": ">=18.19.0"
+    "node": ">=22.3"
   },
   "dependencies": {
     "fancy-canvas": "2.1.0"
@@ -60,7 +60,7 @@
     "@types/chai": "~4.3.16",
     "@types/glob": "~8.1.0",
     "@types/mocha": "~10.0.6",
-    "@types/node": "~18.19.18",
+    "@types/node": "~20",
     "@types/pixelmatch": "~5.2.6",
     "@types/pngjs": "~6.0.5",
     "@typescript-eslint/eslint-plugin": "~7.13.0",
@@ -82,8 +82,9 @@
     "eslint-plugin-react": "~7.34.2",
     "eslint-plugin-tsdoc": "~0.3.0",
     "eslint-plugin-unicorn": "~54.0.0",
+    "esno": "~4.7.0",
     "express": "~4.19.2",
-    "glob": "~10.4.1",
+    "glob": "~10.4.2",
     "markdown-it": "~14.1.0",
     "markdown-it-anchor": "~9.0.1",
     "markdownlint-cli": "~0.41.0",
@@ -92,7 +93,7 @@
     "npm-run-all": "~4.1.5",
     "pixelmatch": "~5.3.0",
     "pngjs": "~7.0.0",
-    "puppeteer": "~22.11.1",
+    "puppeteer": "~22.12.0",
     "rimraf": "~5.0.7",
     "rollup": "~4.18.0",
     "size-limit": "~11.1.4",
@@ -104,7 +105,7 @@
     "tslint": "6.1.3",
     "tslint-eslint-rules": "~5.4.0",
     "tslint-microsoft-contrib": "~6.2.0",
-    "tsx": "~4.15.6",
+    "tsx": "~4.15.7",
     "typescript": "~5.4.5",
     "yargs": "~17.7.2"
   },
@@ -131,7 +132,7 @@
     "prepare-package-json-for-release": "node ./scripts/clean-package-json.js",
     "size-limit": "size-limit",
     "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit -p type-tests",
-    "test": "mocha --import=tsx tests/unittests/**/*.spec.ts",
+    "test": "esno --import ./tests/unittests/setup.units.mjs --test './tests/unittests/**/*.spec.ts'",
     "type-tests": "tsc -b ./src/tsconfig.composite.json && tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit"
   }
 }
