--- a/package.json
+++ b/package.json
@@ -58,14 +58,15 @@
     "@rollup/plugin-terser": "~0.4.4",
     "@size-limit/file": "~11.1.4",
     "@types/chai": "~4.3.16",
+    "@types/express": "~4.17.21",
     "@types/glob": "~8.1.0",
     "@types/mocha": "~10.0.6",
     "@types/node": "~20",
     "@types/pixelmatch": "~5.2.6",
     "@types/pngjs": "~6.0.5",
-    "@typescript-eslint/eslint-plugin": "~7.13.0",
+    "@typescript-eslint/eslint-plugin": "~7.15.0",
     "@typescript-eslint/eslint-plugin-tslint": "~7.0.2",
-    "@typescript-eslint/parser": "~7.13.0",
+    "@typescript-eslint/parser": "~7.15.0",
     "bytes": "~3.1.2",
     "chai": "~5.1.1",
     "chai-exclude": "~2.1.1",
@@ -75,11 +76,11 @@
     "eslint-formatter-unix": "~8.40.0",
     "eslint-plugin-deprecation": "~3.0.0",
     "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~48.2.12",
+    "eslint-plugin-jsdoc": "~48.5.0",
     "eslint-plugin-markdown": "~5.0.0",
     "eslint-plugin-mdx": "~3.1.5",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-react": "~7.34.2",
+    "eslint-plugin-react": "~7.34.3",
     "eslint-plugin-tsdoc": "~0.3.0",
     "eslint-plugin-unicorn": "~54.0.0",
     "esno": "~4.7.0",
@@ -91,21 +92,21 @@
     "memlab": "~1.1.48",
     "mocha": "~10.4.0",
     "npm-run-all": "~4.1.5",
-    "pixelmatch": "~5.3.0",
+    "pixelmatch": "~6.0.0",
     "pngjs": "~7.0.0",
-    "puppeteer": "~22.12.0",
+    "puppeteer": "~22.12.1",
     "rimraf": "~5.0.7",
     "rollup": "~4.18.0",
     "size-limit": "~11.1.4",
     "ts-node": "~10.9.2",
-    "ts-patch": "~3.2.0",
+    "ts-patch": "~3.2.1",
     "ts-transformer-properties-rename": "~0.16.0",
     "ts-transformer-strip-const-enums": "~2.0.0",
     "tslib": "2.6.3",
     "tslint": "6.1.3",
     "tslint-eslint-rules": "~5.4.0",
     "tslint-microsoft-contrib": "~6.2.0",
-    "tsx": "~4.15.7",
+    "tsx": "~4.16.0",
     "typescript": "~5.4.5",
     "yargs": "~17.7.2"
   },
@@ -133,6 +134,7 @@
     "size-limit": "size-limit",
     "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit -p type-tests",
     "test": "esno --import ./tests/unittests/setup.units.mjs --test './tests/unittests/**/*.spec.ts'",
-    "type-tests": "tsc -b ./src/tsconfig.composite.json && tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit"
+    "type-tests": "tsc -b ./src/tsconfig.composite.json && tsc -p ./tests/type-checks/tsconfig.composite.json --noEmit",
+    "e2e:memleaks": "esno ./tests/e2e/memleaks/runner.ts ./dist/lightweight-charts.standalone.development.js"
   }
 }
