revert puppeteer config file back to cjs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ jobs:
     steps:
       - checkout-with-deps
       - run: npm install
+      - run: npx puppeteer browsers install chrome
       - save_cache: *save-node-modules-cache
 
   install-deps-website:
