--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,7 @@ commands:
             echo 'export TESTS_REPORT_FILE="test-results/graphics/results.xml"' >> $BASH_ENV
             echo 'export DEVICE_PIXEL_RATIO=<< parameters.devicePixelRatio >>' >> $BASH_ENV
             echo 'export PRODUCTION_BUILD=<< parameters.productionBuild >>' >> $BASH_ENV
+            echo 'export COMPARE_BRANCH="v5-candidate"' >> $BASH_ENV
       - run:
           command: scripts/run-graphics-tests.sh
           no_output_timeout: 20m
@@ -188,7 +189,8 @@ jobs:
     executor: node-executor
     steps:
       - checkout-with-deps
-      - run: scripts/check-dts-changes.sh ./dts-changes $(git merge-base origin/master HEAD) $(git rev-parse HEAD)
+      # - run: scripts/check-dts-changes.sh ./dts-changes $(git merge-base origin/master HEAD) $(git rev-parse HEAD)
+      - run: scripts/check-dts-changes.sh ./dts-changes $(git rev-parse origin/v5-candidate) $(git rev-parse HEAD)
       - store_artifacts:
           path: ./dts-changes
           when: on_fail
@@ -277,6 +279,8 @@ jobs:
       - checkout-with-deps
       - attach_workspace:
           at: ./
+      - run:
+          command: echo 'export COMPARE_BRANCH="v5-candidate"' >> $BASH_ENV
       - run:
           name: "Comparing sizes with merge-base"
           command: node scripts/compare-size-with-merge-base.js
