--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,6 +287,7 @@ jobs:
 
   build-docusaurus-website:
     executor: node-executor
+    resource_class: medium+
     steps:
       - checkout-with-deps
       - run: npm run build:prod
