add more detailed size-limit tracking
Update dependencies and fix CI build

--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 package-lock=false
 legacy-peer-deps=true
-engine-strict=true
+engine-strict=false # memlab doesn't explictly mention node v22 yet.
 prefer-dedupe=true
 prefer-offline=true
 save-prefix=~
