--- a/package.json
+++ b/package.json
@@ -57,44 +57,45 @@
     "@rollup/plugin-replace": "~5.0.7",
     "@rollup/plugin-terser": "~0.4.4",
     "@size-limit/file": "~11.1.4",
+    "@size-limit/webpack": "~11.1.4",
     "@types/chai": "~4.3.16",
     "@types/express": "~4.17.21",
     "@types/glob": "~8.1.0",
     "@types/node": "~20",
     "@types/pixelmatch": "~5.2.6",
     "@types/pngjs": "~6.0.5",
-    "@typescript-eslint/eslint-plugin": "~7.15.0",
+    "@typescript-eslint/eslint-plugin": "~7.17.0",
     "@typescript-eslint/eslint-plugin-tslint": "~7.0.2",
-    "@typescript-eslint/parser": "~7.15.0",
+    "@typescript-eslint/parser": "~7.17.0",
     "bytes": "~3.1.2",
     "chai": "~5.1.1",
-    "chai-exclude": "~2.1.1",
+    "chai-exclude": "~3.0.0",
     "cross-env": "~7.0.3",
     "dts-bundle-generator": "~9.5.1",
     "eslint": "8",
     "eslint-formatter-unix": "~8.40.0",
     "eslint-plugin-deprecation": "~3.0.0",
     "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~48.5.0",
-    "eslint-plugin-markdown": "~5.0.0",
+    "eslint-plugin-jsdoc": "~48.9.2",
+    "eslint-plugin-markdown": "~5.1.0",
     "eslint-plugin-mdx": "~3.1.5",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-react": "~7.34.3",
+    "eslint-plugin-react": "~7.35.0",
     "eslint-plugin-tsdoc": "~0.3.0",
-    "eslint-plugin-unicorn": "~54.0.0",
+    "eslint-plugin-unicorn": "~55.0.0",
     "esno": "~4.7.0",
     "express": "~4.19.2",
-    "glob": "~10.4.2",
+    "glob": "~11.0.0",
     "markdown-it": "~14.1.0",
     "markdown-it-anchor": "~9.0.1",
     "markdownlint-cli": "~0.41.0",
-    "memlab": "~1.1.49",
+    "memlab": "~1.1.51",
     "npm-run-all": "~4.1.5",
     "pixelmatch": "~6.0.0",
     "pngjs": "~7.0.0",
-    "puppeteer": "~22.12.1",
-    "rimraf": "~5.0.7",
-    "rollup": "~4.18.0",
+    "puppeteer": "~22.14.0",
+    "rimraf": "~6.0.1",
+    "rollup": "~4.19.1",
     "size-limit": "~11.1.4",
     "ts-node": "~10.9.2",
     "ts-patch": "~3.2.1",
