--- a/debug/debug-esm.html.example
+++ b/debug/debug-esm.html.example
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
-	<title>Debug page</title>
+	<title>ESM Debug page</title>
 </head>
 <body style="padding: 0; margin: 0;">
 	<div id="container" style="position: absolute; width: 100%; height: 100%;"></div>
