--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ package-lock.json
 !/debug/debug-standalone.html.example
 !/debug/debug-esm.html.example
 !/debug/debug-esm.mjs.example
-
+!/debug/tsconfig.json
+!/debug/.eslintrc.cjs
 
 # python
 *.pyc
