remove duplicate type definition
and add a CI check

--- a/package.json
+++ b/package.json
@@ -120,7 +120,9 @@
     "lint": "npm-run-all -p lint:**",
     "lint:eslint": "eslint --format=unix ./",
     "lint:md": "markdownlint -i \"**/node_modules/**\" -i \"**/website/docs/api/**\" -i \"**/website/versioned_docs/**/api/**\" -i \"**/*.mdx\" \"**/*.md\"",
-    "check-dts-docs": "eslint --format=unix ./dist/typings.d.ts --no-ignore",
+    "check-dts-docs": "npm-run-all -p check-dts-docs-duplicates check-dts-docs-eslint",
+    "check-dts-docs-duplicates": "node ./scripts/check-typings-for-duplicates.js ./dist/typings.d.ts",
+    "check-dts-docs-eslint": "eslint --format=unix ./dist/typings.d.ts --no-ignore",
     "check-markdown-links": "node scripts/check-markdown-links.js",
     "rollup": "rollup -c rollup.config.js",
     "rollup-watch": "npm run rollup -- --watch",
