improve job titles

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -360,18 +360,18 @@ workflows:
           requires:
             - build
       - graphics-tests:
-          name: graphics-tests-part1-dpr<< matrix.dpr >><< matrix.productionBuild >>
+          name: graphics-tests-part1-dpr<< matrix.dpr >><<# matrix.productionBuild >>-PROD<</ matrix.productionBuild >>
           grep: "(api/|applying-options/|series-markers/|price-scale/)"
           matrix: *graphics-test-matrix
           <<: *graphics-test-config
       - graphics-tests:
-          name: graphics-tests-part2-dpr<< matrix.dpr >><< matrix.productionBuild >>
+          name: graphics-tests-part2-dpr<< matrix.dpr >><<# matrix.productionBuild >>-PROD<</ matrix.productionBuild >>
           grep: "(initial-options/|logical-range/|panes/|plugins/|two-scales/|test-cases/)"
           matrix: *graphics-test-matrix
           <<: *graphics-test-config
       - graphics-tests:
-          name: graphics-tests-part3-dpr<< matrix.dpr >><< matrix.productionBuild >>
-          grep: "(series/|series-markers/|time-scale/|degenerative-horizontal-series-with-integer-min-tick/)"
+          name: graphics-tests-part3-dpr<< matrix.dpr >><<# matrix.productionBuild >>-PROD<</ matrix.productionBuild >>
+          grep: "(series/|time-scale/|degenerative-horizontal-series-with-integer-min-tick/)"
           matrix: *graphics-test-matrix
           <<: *graphics-test-config
       - memleaks-tests:
