--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "node": ">=16.16.0"
   },
   "dependencies": {
+    "csv-parse": "~5.5.6",
     "fancy-canvas": "2.1.0",
     "lightweight-charts": "~4.2.0"
   },
@@ -65,7 +66,7 @@
     "@types/chai": "~4.3.5",
     "@types/glob": "~8.1.0",
     "@types/mocha": "~10.0.1",
-    "@types/node": "~16.18.9",
+    "@types/node": "~16.18.108",
     "@types/pixelmatch": "~5.2.4",
     "@types/pngjs": "~6.0.1",
     "@typescript-eslint/eslint-plugin": "~5.59.6",
