--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "node": ">=16.16.0"
   },
   "dependencies": {
+    "axios": "~1.7.7",
     "csv-parse": "~5.5.6",
     "fancy-canvas": "2.1.0",
     "lightweight-charts": "~4.2.0"
