--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 
 version: 2.1
 
+parameters:
+  run_branch_specific_graphics_tests:
+    type: boolean
+    default: false
+
 aliases:
   - &restore-node-modules-cache
       name: Restore node_modules cache
@@ -65,6 +70,9 @@ commands:
         default: false
       grep:
         type: string
+      branchSpecificTest:
+        type: boolean
+        default: false
     steps:
       - checkout-with-deps
       - run:
@@ -77,6 +85,7 @@ commands:
             echo 'export PRODUCTION_BUILD=<< parameters.productionBuild >>' >> $BASH_ENV
             echo 'export GREP="<< parameters.grep >>"' >> $BASH_ENV
             echo 'export COMPARE_BRANCH="v5-candidate"' >> $BASH_ENV
+            echo 'export BRANCH_SPECIFIC_TEST=<< parameters.branchSpecificTest >>' >> $BASH_ENV
       - run:
           command: scripts/run-graphics-tests.sh
           no_output_timeout: 20m
@@ -206,12 +215,16 @@ jobs:
       productionBuild:
         type: boolean
         default: false
+      branchSpecificTest:
+        type: boolean
+        default: false
     executor: node-browsers-executor
     steps:
       - run-graphics-tests:
           devicePixelRatio: << parameters.dpr >>
           grep: << parameters.grep >>
           productionBuild: << parameters.productionBuild >>
+          branchSpecificTest: << parameters.branchSpecificTest >>
 
   memleaks-tests:
     executor: node-browsers-executor
@@ -318,7 +331,41 @@ anchors:
 workflows:
   version: 2
 
+  branch-specific-graphics-tests:
+    when: << pipeline.parameters.run_branch_specific_graphics_tests >>
+    jobs:
+      - install-deps:
+          filters: *default-filters
+      - install-deps-website:
+          filters: *default-filters
+      - build:
+          filters: *default-filters
+          requires:
+            - install-deps
+            - install-deps-website
+
+      - graphics-tests:
+          name: branch_specific_graphics-tests-part1-dpr<< matrix.dpr >><<# matrix.productionBuild >>-PROD<</ matrix.productionBuild >>
+          grep: "(api/|applying-options/|series-markers/|price-scale/)"
+          branchSpecificTest: true
+          matrix: *graphics-test-matrix
+          <<: *graphics-test-config
+      - graphics-tests:
+          name: branch_specific_graphics-tests-part2-dpr<< matrix.dpr >><<# matrix.productionBuild >>-PROD<</ matrix.productionBuild >>
+          grep: "(initial-options/|logical-range/|panes/|plugins/|two-scales/|test-cases/)"
+          branchSpecificTest: true
+          matrix: *graphics-test-matrix
+          <<: *graphics-test-config
+      - graphics-tests:
+          name: branch_specific_graphics-tests-part3-dpr<< matrix.dpr >><<# matrix.productionBuild >>-PROD<</ matrix.productionBuild >>
+          grep: "(series/|time-scale/|degenerative-horizontal-series-with-integer-min-tick/)"
+          branchSpecificTest: true
+          matrix: *graphics-test-matrix
+          <<: *graphics-test-config
+
   build-lint-test:
+    when:
+      not: << pipeline.parameters.run_branch_specific_graphics_tests >>
     jobs:
       - install-deps:
           filters: *default-filters
