--- a/package.json
+++ b/package.json
@@ -12,29 +12,8 @@
     "type": "git",
     "url": "https://github.com/tradingview/lightweight-charts.git"
   },
-  "module": "dist/lightweight-charts.production.mjs",
-  "main": "index.cjs",
-  "typings": "dist/typings.d.ts",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "development": {
-        "types": "./dist/typings.d.ts",
-        "import": "./dist/lightweight-charts.development.mjs",
-        "require": "./dist/lightweight-charts.development.cjs"
-      },
-      "production": {
-        "types": "./dist/typings.d.ts",
-        "import": "./dist/lightweight-charts.production.mjs",
-        "require": "./dist/lightweight-charts.production.cjs"
-      },
-      "default": {
-        "types": "./dist/typings.d.ts",
-        "import": "./dist/lightweight-charts.production.mjs",
-        "require": "./index.cjs"
-      }
-    }
-  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/**"
   ],
@@ -54,13 +33,8 @@
     "fancy-canvas": "2.1.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "~15.0.2",
-    "@rollup/plugin-replace": "~5.0.2",
-    "@rollup/plugin-terser": "~0.4.3",
-    "@size-limit/file": "~8.2.4",
     "@types/chai": "~4.3.5",
     "@types/glob": "~8.1.0",
-    "@types/mocha": "~10.0.1",
     "@types/node": "~16.18.9",
     "@types/pixelmatch": "~5.2.4",
     "@types/pngjs": "~6.0.1",
@@ -87,14 +61,9 @@
     "markdown-it": "~13.0.1",
     "markdown-it-anchor": "~8.6.7",
     "markdownlint-cli": "~0.34.0",
-    "memlab": "~1.1.39",
-    "mocha": "~10.2.0",
-    "npm-run-all": "~4.1.5",
     "pixelmatch": "~5.3.0",
     "pngjs": "~7.0.0",
     "rimraf": "~5.0.1",
-    "rollup": "~3.29.5",
-    "size-limit": "~8.2.4",
     "ts-node": "~10.9.1",
     "ts-transformer-properties-rename": "~0.16.0",
     "ts-transformer-strip-const-enums": "~1.0.1",
@@ -102,29 +71,10 @@
     "tslint": "6.1.3",
     "tslint-eslint-rules": "~5.4.0",
     "tslint-microsoft-contrib": "~6.2.0",
-    "ttypescript": "~1.5.15",
-    "typescript": "4.9.5",
+    "typescript": "~5.6.3",
     "yargs": "~17.7.2"
   },
   "scripts": {
-    "clean": "rimraf lib/ dist/",
-    "bundle-dts": "tsc --noEmit --allowJs dts-config.js && dts-bundle-generator --config dts-config.js",
-    "tsc": "ttsc -p tsconfig.prod.json",
-    "tsc-watch": "npm run tsc -- --watch --preserveWatchOutput",
-    "tsc-verify": "node website/scripts/generate-versions-dts.js && tsc -b tsconfig.composite.json",
-    "lint": "npm-run-all -p lint:**",
-    "lint:eslint": "eslint --format=unix ./",
-    "check-dts-docs": "eslint --format=unix ./dist/typings.d.ts",
-    "check-markdown-links": "node scripts/check-markdown-links.js",
-    "rollup": "rollup -c rollup.config.js",
-    "rollup-watch": "npm run rollup -- --watch",
-    "build": "npm-run-all tsc rollup bundle-dts",
-    "build:watch": "npm-run-all tsc -p tsc-watch rollup-watch",
-    "build:prod": "cross-env NODE_ENV=production npm run build",
-    "build:release": "cross-env BUILD_TAG=release npm run build:prod",
-    "prepare-release": "npm-run-all clean build:release && npm run prepare-package-json-for-release",
-    "prepare-package-json-for-release": "node ./scripts/clean-package-json.js",
-    "size-limit": "size-limit",
-    "verify": "npm-run-all clean -p build:prod check-markdown-links -p lint check-dts-docs tsc-verify test size-limit -p type-tests"
+    "build": "tsc"
   }
 }
