--- a/website/package.json
+++ b/website/package.json
@@ -12,13 +12,13 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.6.3",
-    "@docusaurus/faster": "3.6.3",
-    "@docusaurus/module-type-aliases": "3.6.3",
-    "@docusaurus/preset-classic": "3.6.3",
-    "@docusaurus/theme-search-algolia": "3.6.3",
+    "@docusaurus/core": "3.7.0",
+    "@docusaurus/faster": "3.7.0",
+    "@docusaurus/module-type-aliases": "3.7.0",
+    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/theme-search-algolia": "3.7.0",
     "@tsconfig/docusaurus": "2.0.3",
-    "@types/react": "^18.3",
+    "@types/react": "18.3",
     "cross-env": "7.0.3",
     "docusaurus-plugin-typedoc": "1.0.1",
     "lightweight-charts": "~4.2.2",
@@ -26,11 +26,11 @@
     "lightweight-charts-4.0": "npm:lightweight-charts@~4.0.1",
     "lightweight-charts-4.1": "npm:lightweight-charts@~4.1.5",
     "lightweight-charts-local": "file:..",
-    "prism-react-renderer": "~2.4.0",
-    "raw-loader": "~4.0.2",
-    "react": "^18.3",
-    "react-dom": "^18.3",
-    "typedoc": "~0.25.13",
+    "prism-react-renderer": "2.4.1",
+    "raw-loader": "4.0.2",
+    "react": "18.3",
+    "react-dom": "18.3",
+    "typedoc": "0.25.13",
     "typedoc-plugin-markdown": "4.0.3",
     "typescript": "5.4.5",
     "vue": "3.5.13"
